related tdf#153183: drop all the other skipValidation

Change-Id: Ie63fbe3d7f4f6ccab32ac6984c4a4b386c128a64
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194513
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Code-Style: Xisco Fauli <xiscofauli@libreoffice.org>