oox/qa/unit/vml.cxx
@@ -209,9 +209,6 @@ CPPUNIT_TEST_FIXTURE(OoxVmlTest, testWriterFontworkTrimTrue)
     // had reduced the shape height.
     loadFromFile(u"tdf153260_VML_trim_export.odt");
 
-    // FIXME: tdf#153183 validation error in OOXML export: Errors: 1
-    // Attribute 'ID' is not allowed to appear in element 'v:shape'.
-    skipValidation();
     saveAndReload(TestFilter::DOCX);
 
     uno::Reference<drawing::XDrawPageSupplier> xDrawPageSupplier(mxComponent, uno::UNO_QUERY);
